--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,6 +36,7 @@ services:
   llama-cpp:
     image: ghcr.io/ggml-org/llama.cpp:server
     platform: linux/arm64
+    pull_policy: always
     ports:
       - "11434:11434"
     networks:
