--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     ports:
       - "8000:8000"
     environment:
-      LLAMACPP_HOST: http://rust-api:8080
+      - LLAMACPP_HOST=http://rust-api:8080
+      - ENABLE_SCANNERS=true
     depends_on:
       - rust-api
     networks:
@@ -23,7 +24,7 @@ services:
     build:
       context: ./server/RUST
     ports:
-      - "8080:8080"
+      - "8081:8080"
     environment:
       LLAMACPP_HOST: http://llama-cpp:11434
     depends_on:
@@ -36,7 +37,14 @@ services:
   llama-cpp:
     build:
       context: ./server/llama-cpp
-    platform: linux/arm64
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [ gpu ]
+
     ports:
       - "11434:11434"
     networks:
